style.css - formatted form holding searchbox to fix responsiveness on smaller screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -177,11 +177,12 @@ nav ul li i {
 .titleBox,
 .boxOne,
 .boxTwo,
-.boxThree, .boxFour {
+.boxThree,
+.boxFour {
   width: 80%;
   height: 50%;
   padding: 40px 0px;
-  margin:  auto;
+  margin: auto;
   min-height: 25vh;
   display: flex;
   text-align: center;
@@ -205,13 +206,14 @@ nav ul li i {
   background: rgba(245, 222, 179, 0.521);
 }
 
-.boxThree, .boxFour {
+.boxThree,
+.boxFour {
   background: rgba(88, 87, 83, 0.534);
   color: #fafafa;
-  margin-right: 5rem; 
+  margin-right: 5rem;
 }
 
-.boxFour{
+.boxFour {
   min-height: 15vh;
 }
 
@@ -244,7 +246,8 @@ this affects the whole container */
 /* this affects the container. 
 Position: relative +
 margin: auto centre the form and keep it responsive */
-.reg-content, form,
+.reg-content,
+form,
 .login-content {
   display: flex;
   flex-direction: column;
@@ -411,14 +414,17 @@ form div i {
   color: #080808;
 }
 
-.accordion{
+.accordion {
   width: 50%;
-  margin: auto;  
+  margin: auto;
+
 }
 
-.accordion-item, .accordion-button{
+.accordion-item,
+.accordion-button {
   background-color: rgba(0, 0, 0, 0.158);
   color: #fafafa;
+
 }
 
 /* this sets the behaviours for the images that appear, which are uploaded by the user */
@@ -427,17 +433,7 @@ form div i {
   max-height: 35vh;
 }
 
-/* this affects the parts of the card that holds the review 
-the background colour value acts as a filter, so that the white 
-text is always displayed against a grey background, 
-and so is proofed against whatever image the user uploads*/
-.review-box {
-  height: 80%;
-  width: 80%;
-  margin: auto;
-  background-color: rgba(80, 76, 70, 0.322);
-  overflow: hidden;
-}
+
 
 /* this is the default styling for the various buttons */
 
@@ -511,7 +507,7 @@ and so is proofed against whatever image the user uploads*/
   text-align: center;
 }
 
-.container-profile h1{
+.container-profile h1 {
   color: #fff;
 }
 
@@ -523,7 +519,8 @@ and so is proofed against whatever image the user uploads*/
 .search-container {
   padding: 10px 5px;
   width: 25%;
-  gap: 15px;
+  height: 30%;
+  gap: 5vh;
   justify-content: center;
   align-items: center;
   border: 2px solid #0a0a0a;
@@ -534,6 +531,7 @@ and so is proofed against whatever image the user uploads*/
   font-size: 20px;
   margin-left: 50px;
   margin: auto;
+  margin-bottom: 10%;
 }
 
 .search-container .input {
@@ -541,11 +539,11 @@ and so is proofed against whatever image the user uploads*/
   width: 100%;
   padding: 0;
   border: none;
-  outline: none;  
+  outline: none;
 }
 
-#search{
-  width:80%;
+#search {
+  width: 80%;
 }
 
 /* MEDIA QUERIES */
@@ -558,24 +556,27 @@ and so is proofed against whatever image the user uploads*/
   .titleBox,
   .boxOne,
   .boxTwo,
-  .boxThree{
+  .boxThree {
     width: 100%;
     min-height: 200px;
   }
 
-  .accordion{
+  /* makes the accordion spoan the whole width */
+  .accordion {
     width: 100%;
   }
-  
+
+  /* resets boxOne position */
   .boxOne {
     margin-left: 0rem;
   }
+
 
   /* this makes the various buttons look better */
   .review-button,
   .edit-review-button,
   .delete-review-button,
-  .cancel-button, .search-container {
+  .cancel-button {
     width: 100%;
     padding: 5px;
   }
@@ -588,25 +589,22 @@ and so is proofed against whatever image the user uploads*/
  and changed the height and width to % */
   }
 
-
-  /* below, setting width and height values to %,
-  along with a min value, keeps things responsive */
-  .review-card {
-    color: white;
-    text-align: center;
-    width: 80%;
-    height: 30%;
-    margin: auto;
-  }
-
+  /* these make the following responsive */
   .view-review-container,
   .container-reg,
   .container-profile,
-  .container-review, .homepageContent {
+  .container-review,
+  .homepageContent {
     width: 90%;
     height: 100%;
     min-height: 80vh;
     min-width: 80vw;
+  }
+
+  /* this positions the search box more nicely, and removes the gap between it and the following .accordion */
+  .search-container {
+    width: 100%;
+    margin-bottom: 0;
   }
 
   /* this reduces space between the labels */
@@ -617,7 +615,6 @@ and so is proofed against whatever image the user uploads*/
   /* this positions the form higher up the container */
   form {
     height: 80%;
-    min-height: 80vh;
     top: 0;
   }
 
@@ -662,9 +659,6 @@ and so is proofed against whatever image the user uploads*/
     display: none;
   }
 
-  /* on smaller screens, the background profile image grabs too much attention, so this remedies that */
-  
-
 }
 
 @media screen and (max-width: 767px) {
@@ -673,18 +667,20 @@ and so is proofed against whatever image the user uploads*/
     padding-left: 80px;
   }
 
-/* on mobile screens, navbar needs heavy adjustments */
+  /* on mobile screens, navbar needs heavy adjustments */
   nav {
     position: absolute;
     bottom: 10vh;
     left: 2vw;
     z-index: 0;
   }
-nav ul li i {
+
+  nav ul li i {
     font-size: 25px;
     margin-right: 10px;
   }
-  nav p{
+
+  nav p {
     display: none;
   }
 
@@ -696,7 +692,7 @@ nav ul li i {
     padding-left: 40px;
   }
 
-  
+
 }
 
 @media screen and (max-width: 480px) {
@@ -705,23 +701,30 @@ nav ul li i {
     padding-left: 15px;
   }
 
-
-  @media (max-width: 425px) {
-
-    form,
-    .form-login {
-      padding: 20px;
-    }
+  .search-container {
+    width: 90%;
+    margin-bottom: 0;
   }
+}
 
-  @media (max-width: 280px) {
 
-    nav ul li i, nav ul li p {
-      font-size: 15px;
-      margin-right: 10px;
-    }
+@media (max-width: 425px) {
+
+  form,
+  .form-login {
+    padding: 20px;
   }
+}
 
+@media (max-width: 280px) {
+
+  nav ul li i,
+  nav ul li p {
+    font-size: 15px;
+    margin-right: 10px;
+  }
 
 
 }
+
+
